Added files for Task 7 to 11

--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -6,9 +6,9 @@
     </head>
     <body>
       {% if num is even %}
-        <h1>Number: {{ num }} is even</h1>
+        <H1>Number: {{ num }} is even</H1>
       {% else %}
-	<h1>Number: {{ num }} is odd</h1>
+	<H1>Number: {{ num }} is odd</H1>
       {% endif %}
     </body>
 </html>
