--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -11,4 +11,5 @@
 			<LI>{{ state.id }}: <B>{{ state.name }}<B></LI>
     		{% endfor %}
     	    </UL>
-    </body> </html>
+    </body> 
+</html>
